fix icon on hero section mobile

--- a/src/assets/sass/modules/_landing.scss
+++ b/src/assets/sass/modules/_landing.scss
@@ -332,6 +332,7 @@
   
           button {
             border-radius: 5px;
+            width: 100%;
           }
     
           .input-group {
@@ -344,8 +345,8 @@
             .icon {
               z-index: 9;
               position: relative;
-              margin-bottom: -30px;
-              margin-right: -15px;
+              margin-bottom: -40px;
+              margin-left: 6px;
   
               i{
                 color: $primary;
